# parkrun-results

./: .gitignore  README.md  app.py  config.py  deploy_pythonanywhere_wsgi.py  pyproject.toml  requirements.txt  test_app.py
analysis/: Parkrun.py  Parkrunner.py  misc_starter_sandbox.py  starter.py
assets/: dashExtensions_default.js
dash/: app.py
dash_app/: __init__.py  routes.py
dash_app/parkrunner_app/: callbacks.py  global_scheme.py  layout.py
demo/: demo.ipynb
modules/: Parkrunner.py
notebooks/: demo.ipynb
parkrun/: Parkrun.py  Parkrunner.py  constants.py  load_data.py
